test/floatcast/floatcast_ptr.vp
//! stage: check
//! expect-compile: error

pub fn main() : void
{
    var a : int32 = 0;
    var p : int32* = &a;
    var f : float64 = floatcast(float64, p); // error: pointer not numeric
}